Alistair Riddoch        <AlRiddoch@zepler.org>           1 Jan 1995-20 Oct 1999
Harry Kalogirou         <HarKal@gmx.net>                 7 Nov 2001-24 Nov 2001
Martijn Bakker          <martijn@insecure.nl>           29 Mar 2002
Michael McConnell       <Soruk@Eridani.co.uk>           11 Nov 2001-12 Nov 2001
Riley Williams          <Riley@Williams.Name>            8 Nov 2001-12 Jun 2002

-------------------------------------------------------------------------------


Sun Oct 20 12:21:27 BST 2002	Paul Nasrat <pauln@truemesh.com>
	
	* Added Italian FAQ


Wed Jun 12 18:28:40 BST 2002	Riley Williams <Riley@Williams.Name>

	* Corrected faulty base href tags in various FAQ's.

Thu May 16 06:24:36 BST 2002	Riley Williams <Riley@Williams.Name>

	* Release history brought up to date. The 0.1.0 kernel release
	  has now been issued, and a source of early ELKS kernels has
	  been found and announced.
	* Corrected links to /download.html that should point to
	  /download/ instead.

Sat Apr 13 19:42:16 BST 2002	Riley Williams <Riley@Williams.Name>

	* Inserted correct Base HRef in all pages.

Sat Apr  6 22:45:56 BST 2002	Riley Williams <Riley@Williams.Name>

	* Martijn's ELKS banner now marked as a binary file.

Fri Apr  5 18:36:54 BST 2002	Riley Williams <Riley@Williams.Name>

	* Martijn's ELKS banner included on ELKS home page.

Fri Mar 29 04:09:16 BST 2002	Martijn Bakker <martijn@insecure.nl>

	* New ELKS banner supplied.

Mon Mar 11 23:05:35 GMT 2002	Riley Williams <Riley@Williams.Name>

	* Release history brought up to date.

Wed Jan  9 23:36:32 GMT 2002	Riley Williams <Riley@Williams.Name>

	* Prepared for addition of images.zip links to download index.

Thu Nov 29 01:34:48 GMT 2001	Riley Williams <Riley@Williams.Name>

	* Corrected punctuation in homepage that led to wierd layout.

Sat Nov 24 16:44:47 EET 2001	Harry Kalogirou <harkal@gmx.net>

	* Wrote the download page.
	* Reformated the home page.
	* Added new release entries.
