@@ -72,10 +72,9 @@ wish to check out must be specified as the <i>modulename</i>. When prompted for 
 password for <i>anonymous</i>, simply press the Enter key.
 </P>
 
-<p><tt>cvs -d:pserver:anonymous@cvs.elks.sourceforge.net:/cvsroot/elks login
-<br>
-cvs -z3 -d:pserver:anonymous@cvs.elks.sourceforge.net:/cvsroot/elks co <i>modulename</i>
-</tt></p>
+<p><tt>cvs -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/elks login <br>
+  cvs -z3 -d:pserver:anonymous@cvs.sourceforge.net:/cvsroot/elks co <i>modulename</i> 
+  </tt></p>
 
 <P Align=Justify>The available <i>modules</i> are :
 <UL>
